--- a/tut8.html
+++ b/tut8.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <p>This is paragraph</p>
-    <p>This is also paragraph</p>
-    <span>This is paragraph</span> <span>This is also paragraph</span>
+    <!-- this is block element -->
+    <p style="border: solid red;">This is paragraph</p>
+    <p style="border:solid yellow">This is also paragraph</p>
+    <!-- span is inline element-->
+    <span style="border:solid black">This is paragraph</span> <span style="border:solid blue">This is also paragraph</span>
 </body>
 
 </html>
