--- a/tut9.html
+++ b/tut9.html
@@ -24,7 +24,7 @@
     <div class="blackbagrount"></div>
     <!-- creating a multiple elements in emmet  -->
     <!-- span.myClass.myClass2.myClass3+<tab> -->
-    <!-- span.myClass.myClass2.myClass*4 -->
+    <!-- span.myClass.myClass2.myClass*4 <tab> to print similar elements using-->
 
 
     <span class="myClass myClass2 myClass3">First</span>
